working on GEOT-2569
git-svn-id: http://svn.osgeo.org/geotools/trunk@33412 e5c1c795-43da-0310-a71f-fac65c449510